--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,14 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_COMPILER g++)
 
-project(QUANTFLOW)
+project(QUANTFLOW
+        VERSION 0.0.1
+        DESCRIPTION
+        "Algorithmic trading platform in C++"
+        HOMEPAGE_URL https://github.com/scaevolabars/quantflow
+        LANGUAGES C CXX
+)
 
-target_link_libraries(QUANTFLOW )
-
-
-
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp)
 
 
